--- a/templates/index.html
+++ b/templates/index.html
@@ -665,7 +665,7 @@
                     </h5>
                   </div>
                   <div>
-                      <form action="/submit_form" method="post" role="form" class="contactForm">
+                      <form action="/submitForm" method="post" role="form" class="contactForm">
                       <div id="sendmessage">Your message has been sent. Thank you!</div>
                       <div id="errormessage"></div>
                       <div class="row">
