--- a/templates/index.html
+++ b/templates/index.html
@@ -496,7 +496,7 @@
   <!--/ Section Portfolio End /-->
 
   <!--/ Section Testimonials Star /-->
-  <div class="testimonials paralax-mf bg-image" style="background-image: url(./static/img/overlay-bg.jpg)">
+  <!-- <div class="testimonials paralax-mf bg-image" style="background-image: url(./static/img/overlay-bg.jpg)">
     <div class="overlay-mf"></div>
     <div class="container">
       <div class="row">
@@ -532,7 +532,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <!--/ Section Blog Star /-->
   <section id="blog" class="blog-mf sect-pt4 route">
