--- a/templates/index.html
+++ b/templates/index.html
@@ -496,13 +496,13 @@
   <!--/ Section Portfolio End /-->
 
   <!--/ Section Testimonials Star /-->
-  <!-- <div class="testimonials paralax-mf bg-image" style="background-image: url(./static/img/overlay-bg.jpg)">
+  <div class="testimonials paralax-mf bg-image" style="background-image: url(./static/img/overlay-bg.jpg)">
     <div class="overlay-mf"></div>
     <div class="container">
       <div class="row">
         <div class="col-md-12">
           <div id="testimonial-mf" class="owl-carousel owl-theme">
-            <div class="testimonial-box">
+            <!-- <div class="testimonial-box">
               <div class="author-test">
                 <img src="./static/img/testimonial-2.jpg" alt="" class="rounded-circle b-shadow-a">
                 <span class="author">Xavi Alonso</span>
@@ -527,12 +527,12 @@
                 </p>
                 <span class="comit"><i class="fa fa-quote-right"></i></span>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
     </div>
-  </div> -->
+  </div>
 
   <!--/ Section Blog Star /-->
   <section id="blog" class="blog-mf sect-pt4 route">
